[gd_scene load_steps=8 format=3 uid="uid://douw86uau7ub6"]

[ext_resource type="Script" path="res://Scenes/TutorialScene/tutorial_scene.gd" id="1_7t37l"]
[ext_resource type="Texture2D" uid="uid://2dd43e32kcu2" path="res://assets/env/MainBG.png" id="1_djlwf"]
[ext_resource type="FontFile" uid="uid://bd8eo6wiwrb8e" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_8e4qq"]
[ext_resource type="Texture2D" uid="uid://h5mgl24wcfwl" path="res://assets/ui/panel_beige.png" id="3_sjxpm"]

[sub_resource type="LabelSettings" id="LabelSettings_t0xrd"]
font = ExtResource("2_8e4qq")
font_size = 48
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_omkl2"]
font = ExtResource("2_8e4qq")
font_size = 48
font_color = Color(0.435294, 1, 0.431373, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d7rmp"]
font = ExtResource("2_8e4qq")
font_size = 18
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="TutorialScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7t37l")

[node name="MainBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_djlwf")

[node name="info" type="Label" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 101.0
offset_right = 1128.0
offset_bottom = 150.0
text = "Goal : throw the bird in the platform"
label_settings = SubResource("LabelSettings_t0xrd")

[node name="info2" type="Label" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 165.0
offset_right = 1128.0
offset_bottom = 214.0
text = "Hover and drag your mouse above the bird
to move it !!"
label_settings = SubResource("LabelSettings_t0xrd")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Title" type="Label" parent="MC"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "TUTORIAL"
label_settings = SubResource("LabelSettings_omkl2")
horizontal_alignment = 1

[node name="TB_MainScene" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 128.0
offset_right = 50.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("3_sjxpm")

[node name="MC_TB" type="MarginContainer" parent="TB_MainScene"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Info" type="Label" parent="TB_MainScene/MC_TB"]
layout_mode = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_d7rmp")
horizontal_alignment = 1

[connection signal="mouse_entered" from="TB_MainScene" to="." method="_on_tb_main_scene_mouse_entered"]
[connection signal="mouse_exited" from="TB_MainScene" to="." method="_on_tb_main_scene_mouse_exited"]
[connection signal="pressed" from="TB_MainScene" to="." method="_on_tb_main_scene_pressed"]
